--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="CSS/styles.css">
     <link href="dist/hamburger.css" rel="stylesheet">
+    <link rel="shortcut icon" href="https://cdn2.iconfinder.com/data/icons/design-creativity-round/128/22-256.png" type="image/x-icon">
 
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,11 +21,11 @@
     <nav id="navegation">
         <h1>Ejercicios del DOM</h1>
         <ul id="menu" class="list">
-            <li><a href="#first">Inicio</a></li>
-            <li><a href="#second">Services</a></li>
-            <li><a href="#third">Projects</a></li>
-            <li><a href="#four">About</a></li>
-            <li><a href="#five">Information</a></li>
+            <li><a class="menuLink" href="#first">Inicio</a></li>
+            <li><a class="menuLink" href="#second">Services</a></li>
+            <li><a class="menuLink" href="#third">Projects</a></li>
+            <li><a class="menuLink" href="#four">About</a></li>
+            <li><a class="menuLink" href="#five">Information</a></li>
         </ul>
         <button id="btn" class="hamburger hamburger--spring " type="button">
             <span class="hamburger-box">
