--- a/index.html
+++ b/index.html
@@ -38,6 +38,18 @@
     <!-- Secciones Principales -->
     <section id="first" class="tam">
         <h2>Primera</h2>
+        <aside class="alarmaRelog">
+            <div>
+                <h3>Alarma Digital</h3>
+                <button>Iniciar Alarma</button>
+                <button>Detener Alarma</button>
+            </div>
+            <div>
+                <h3>Relog Digital</h3>
+                <button>Iniciar Relog</button>
+                <button>Detener Relog</button>
+            </div>
+        </aside>
     </section>
     <section id="second" class="tam">
         <h2>Segunda</h2>
