--- a/index.html
+++ b/index.html
@@ -39,15 +39,18 @@
     <section id="first" class="tam">
         <h2>Primera</h2>
         <aside class="alarmaRelog">
-            <div>
+            <div class="elements">
                 <h3>Alarma Digital</h3>
-                <button>Iniciar Alarma</button>
-                <button>Detener Alarma</button>
+                <div class="hour">
+                    
+                </div>
+                <button id="start" class="btn">Iniciar Alarma</button>
+                <button class="btn">Detener Alarma</button>
             </div>
-            <div>
+            <div class="elements">
                 <h3>Relog Digital</h3>
-                <button>Iniciar Relog</button>
-                <button>Detener Relog</button>
+                <button class="btn">Iniciar Relog</button>
+                <button class="btn">Detener Relog</button>
             </div>
         </aside>
     </section>
