--- a/index.html
+++ b/index.html
@@ -37,20 +37,20 @@
     
     <!-- Secciones Principales -->
     <section id="first" class="tam">
-        <h2>Primera</h2>
+        <h2>Alarm and Relog</h2>
         <aside class="alarmaRelog">
             <div class="elements">
-                <h3>Alarma Digital</h3>
+                <h3>Relog Digital</h3>
                 <div class="hour">
                     
                 </div>
-                <button id="start" class="btn">Iniciar Alarma</button>
-                <button id="stop" class="btn">Detener Alarma</button>
+                <button id="start" class="btn">Start Relog</button>
+                <button id="stop" class="btn">Stop Relog</button>
             </div>
             <div class="elements">
-                <h3>Relog Digital</h3>
-                <button id="startAlarm"class="btn">Iniciar Relog</button>
-                <button id="stopAlarm"class="btn">Detener Relog</button>
+                <h3>Alarm Digital</h3>
+                <button id="startAlarm"class="btn">Start Relog</button>
+                <button id="stopAlarm"class="btn">Stop Relog</button>
             </div>
         </aside>
     </section>
