Complete function relog and alarm

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
                     
                 </div>
                 <button id="start" class="btn">Iniciar Alarma</button>
-                <button class="btn">Detener Alarma</button>
+                <button id="stop" class="btn">Detener Alarma</button>
             </div>
             <div class="elements">
                 <h3>Relog Digital</h3>
-                <button class="btn">Iniciar Relog</button>
-                <button class="btn">Detener Relog</button>
+                <button id="startAlarm"class="btn">Iniciar Relog</button>
+                <button id="stopAlarm"class="btn">Detener Relog</button>
             </div>
         </aside>
     </section>
