Add section of three Challenge

--- a/index.html
+++ b/index.html
@@ -54,8 +54,12 @@
             </div>
         </aside>
     </section>
+
     <section id="second" class="tam">
         <h2>Segunda</h2>
+        <div id="background  startKeyBoard">
+            <span></span>
+        </div>
     </section>
     <section id="third" class="tam">
         <h2>Tercera</h2>
