Add function event keyboard

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
     <section id="second" class="tam">
         <h2>Segunda</h2>
-        <div id="background  startKeyBoard">
-            <span></span>
+        <div id="background" id="startKeyBoard">
+            <div></div>
         </div>
     </section>
     <section id="third" class="tam">
