Add Events Keyboard
I've add events a the words v, Ctrl and more

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
     </section>
 
     <section id="second" class="tam">
-        <h2>Segunda</h2>
-        <div id="background" id="startKeyBoard">
-            <div></div>
+        <h2 id="titleName">Segunda</h2>
+        <div id="background" >
+            <div id='elementBall'class="bull"></div>
         </div>
     </section>
     <section id="third" class="tam">
