Completed Events KeyBoard
I've completed exercise the keyboard with some events

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
     </section>
 
     <section id="second" class="tam">
-        <h2 id="titleName">Segunda</h2>
+        <h2 id="titleName">Section Shortcut only keyBoard</h2>
         <div id="background" >
-            <div id='elementBall'class="bull"></div>
+            <div id='elementBall' class="bull"></div>
         </div>
     </section>
     <section id="third" class="tam">
