--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
     <section id="third" class="tam">
         <h2>CountDown</h2>
         <form id="form">
-            <input type="date" name="Date" id="Date">
-            <input type="submit" value="CountDown" id="btnCountDown">
+            <input type="datetime" name="Date" id="Date">
+            <input type="button" value="Programar 😎" id="btnCountDown">
         </form>
         <div>
             <h3 id="countDown">Monday, 02:25:06 PM</h3>
