Add updown with btn element
I've add btn element to updown

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons"
+      rel="stylesheet">
+
     <script type="module" src="SRC/index.js"></script>
 </head>
 <body>
@@ -33,6 +36,8 @@
             </span>
         </button>
     </nav>
+
+
 
     
     <!-- Secciones Principales -->
@@ -61,6 +66,7 @@
             <div id='elementBall' class="bull"></div>
         </div>
     </section>
+
     <section id="third" class="tam">
         <h2>CountDown</h2>
         <form id="form">
@@ -71,8 +77,12 @@
             <h3 id="countDown">Monday, 02:25:06 PM</h3>
         </div>
     </section>
+    
     <section id="four" class="tam">
         <h2>Cuarta</h2>
+        <div class="down">
+            <span class="material-icons">arrow_upward</span>
+        </div>
     </section>
     <section id="five" class="tam">
         <h2>Quinta</h2>
