--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script type="module" src="SRC/index.js"></script>
 </head>
 <body>
-    <nav id="navegation">
+    <nav id="navegation" class="navegations">
         <h1>Ejercicios del DOM</h1>
         <ul id="menu" class="list">
             <li><a class="menuLink" href="#first">Inicio</a></li>
@@ -30,12 +30,12 @@
             <li><a class="menuLink" href="#four">About</a></li>
             <li><a class="menuLink" href="#five">Information</a></li>
         </ul>
-        <button id="btn" class="hamburger hamburger--spring " type="button">
-            <span class="hamburger-box">
-                <span id="buta" class="hamburger-inner"></span>
-            </span>
-        </button>
     </nav>
+    <button id="btn" class="hamburger hamburger--spring " type="button">
+        <span class="hamburger-box">
+            <span id="buta" class="hamburger-inner"></span>
+        </span>
+    </button>
 
 
 
@@ -79,11 +79,12 @@
     </section>
     
     <section id="four" class="tam">
-        <h2>Cuarta</h2>
-        <div class="down">
+        <h2>Button Scrold and Nav Styles Scroll</h2>
+        <div id="btnScroll" class="down">
             <span class="material-icons">arrow_upward</span>
         </div>
     </section>
+    
     <section id="five" class="tam">
         <h2>Quinta</h2>
     </section>
