Add theme dark and Light
I'm working the function to change the themes

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <section id="five" class="tam">
         <h2>Btn to change Theme Dark/Light</h2>
         <div id="btnTheme" class="theme">
-            <span class="material-icons">arrow_upward</span>
+            <span id="spanBtn" class="material-icons">brightness_5</span>
         </div>
     </section>
     
