Add component with styles
I've been working the component with information

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <nav id="navegation" class="navegations">
-        <h1>Ejercicios del DOM</h1>
+        <h1>DOM and BOM</h1>
         <ul id="menu" class="list">
             <li><a class="menuLink" href="#first">Inicio</a></li>
             <li><a class="menuLink" href="#second">Services</a></li>
@@ -83,6 +83,7 @@
         <div id="btnScroll" class="down">
             <span class="material-icons">arrow_upward</span>
         </div>
+        <reusable-elements information="This information component"></reusable-elements>
     </section>
 
     <section id="five" class="tam">
@@ -90,6 +91,7 @@
         <div id="btnTheme" class="theme">
             <span id="spanBtn" class="material-icons">brightness_5</span>
         </div>
+        <reusable-elements information="Information theme"></reusable-elements>
     </section>
     
     
