Component resuable completed
I've finished component with styles and responsive

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </section>
     
     <section id="four" class="tam" >
-        <h2 data-theme>Button Scrold and Nav Styles Scroll</h2>
+        <h2 data-theme>Button Scroll and Nav Styles Scroll</h2>
         <div id="btnScroll" class="down">
             <span class="material-icons">arrow_upward</span>
         </div>
