Last changes before install vite
I've saved last changes before install vite js

--- a/index.html
+++ b/index.html
@@ -20,7 +20,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons"
       rel="stylesheet">
 
+    <!-- Notie -->
+
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
+    <style>
+    /* override styles here */
+        .notie-container {
+             box-shadow: none;
+        }
+    </style>
+
     <script type="module" src="SRC/index.js"></script>
+    <script defer src="https://unpkg.com/notie"></script>
 </head>
 <body>
     <nav id="navegation" class="navegations">
