I've updated url of the HTML

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mini WebSite</title>
 
-    <link rel="stylesheet" href="CSS/styles.css">
-    <link rel="stylesheet" href="CSS/styleElements.css">
-    <link rel="stylesheet" href="CSS/responsive.css">
-    <link href="dist/hamburger.css" rel="stylesheet">
+    <link rel="stylesheet" href="/CSS/styles.css">
+    <link rel="stylesheet" href="/CSS/styleElements.css">
+    <link rel="stylesheet" href="/CSS/responsive.css">
+    <link href="/dist/hamburger.css" rel="stylesheet">
     <link rel="shortcut icon" href="https://cdn2.iconfinder.com/data/icons/design-creativity-round/128/22-256.png" type="image/x-icon">
 
     <!-- Google Font -->
@@ -47,9 +47,6 @@
         </span>
     </button>
 
-
-    
-    
     <!-- Secciones Principales -->
     <section id="first" class="tam" >
         <h2 data-theme>Alarm and Relog</h2>
@@ -129,6 +126,11 @@
     <section id="six" class="tam">
         <h2 data-theme>Navigator and user Agent</h2>
         <section id="userAgent"></section>
+    </section>
+
+    <section id="seven" class="tam">
+        <h2 data-theme>Detection divice</h2>
+        <section id="getUserMedia"></section>
     </section>
     <script type="module" src="/SRC/index.js"></script>
 </body>
