Added and completed getUseMedia
I've been working and finished this function to active and detect media devices

--- a/index.html
+++ b/index.html
@@ -130,7 +130,9 @@
 
     <section id="seven" class="tam">
         <h2 data-theme>Detection divice</h2>
-        <section id="getUserMedia"></section>
+        <section id="getUserMedia">
+            <video id="webcam"></video>
+        </section>
     </section>
     <script type="module" src="/SRC/index.js"></script>
 </body>
