--- a/index.html
+++ b/index.html
@@ -134,6 +134,12 @@
             <video id="webcam"></video>
         </section>
     </section>
+
+    <section id="eight" class="tam">
+        <h2 data-theme>Geolocation</h2>
+        <section id="geolocation"></section>
+    </section>
+
     <script type="module" src="/SRC/index.js"></script>
 </body>
 </html>
