--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/SRC/CSS/styles.css">
     <link rel="stylesheet" href="/SRC/CSS/styleElements.css">
     <link rel="stylesheet" href="/SRC/CSS/responsive.css">
-    <link href="/dist/hamburger.css" rel="stylesheet">
+    <link href="/SRC/CSS/dist/hamburger.css" rel="stylesheet">
     <link rel="shortcut icon" href="https://cdn2.iconfinder.com/data/icons/design-creativity-round/128/22-256.png" type="image/x-icon">
 
     <!-- Google Font -->
@@ -32,15 +32,21 @@
 <body>
     <nav id="navegation" class="navegations">
         <h1>DOM and BOM</h1>
-        <ul id="menu" class="list">
-            <li><a class="menuLink" href="#first">Alarm and Relog</a></li>
-            <li><a class="menuLink" href="#second">Shortcut and KeyBoard</a></li>
-            <li><a class="menuLink" href="#third">CountDown</a></li>
-            <li><a class="menuLink" href="#four">Button and Event Scroll</a></li>
-            <li><a class="menuLink" href="#five">Theme Dark and Light</a></li>
-            <li><a class="menuLink" href="#six">Responsive Tester</a></li>
-        </ul>
     </nav>
+    <!-- Menu -->
+    <ul id="menu" class="list">
+        <li><a class="menuLink" href="#first">Alarm and Relog</a></li>
+        <li><a class="menuLink" href="#second">Shortcut and KeyBoard</a></li>
+        <li><a class="menuLink" href="#third">CountDown</a></li>
+        <li><a class="menuLink" href="#four">Button and Event Scroll</a></li>
+        <li><a class="menuLink" href="#five">Theme Dark and Light</a></li>
+        <li><a class="menuLink" href="#six">Responsive Tester</a></li>
+        <li><a class="menuLink" href="#seven">Detection Device</a></li>
+        <li><a class="menuLink" href="#eight">Geolocation</a></li>
+        <li><a class="menuLink" href="#nine">Filter</a></li>
+        <li><a class="menuLink" href="#ten">Digital Draw</a></li>
+        <li><a class="menuLink" href="#eleven">Responsive Slider</a></li>
+    </ul>
     <button id="btn" class="hamburger hamburger--spring " type="button">
         <span class="hamburger-box">
             <span id="buta" class="hamburger-inner"></span>
