Added video intelligent and pageVisivility
I've been working and finishing a video intelligent with Intersection Observer and API visibility

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <li id="#nine" data-scroll-spy><a class="menuLink" data-scroll-spy href="#nine">Filter</a></li>
         <li id="#ten" data-scroll-spy><a class="menuLink" data-scroll-spy href="#ten">Digital Draw</a></li>
         <li id="#eleven" data-scroll-spy><a class="menuLink" data-scroll-spy href="#eleven">Responsive Slider</a></li>
+        <li id="#twelve" data-scroll-spy><a href="#twelve" class="menuLink" data-scroll-spy>Video Intelligent</a></li>
     </ul>
     <button id="btn" class="hamburger hamburger--spring " type="button">
         <span class="hamburger-box">
@@ -200,6 +201,15 @@
         </div>
     </section>
 
+    <section id="twelve" class="tam">
+        <h2 data-theme>Intelligent Video</h2>
+        <div class="videIn">
+            <video controls class="video" muted >
+                <source src="https://archive.org/download/BigBuckBunny_124/Content/big_buck_bunny_720p_surround.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
+    </section>
     <script type="module" src="/SRC/index.js"></script>
 </body>
 </html>
