Added form and their styles
I've added the form with the validations

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <li id="#ten" data-scroll-spy><a class="menuLink" data-scroll-spy href="#ten">Digital Draw</a></li>
         <li id="#eleven" data-scroll-spy><a class="menuLink" data-scroll-spy href="#eleven">Responsive Slider</a></li>
         <li id="#twelve" data-scroll-spy><a href="#twelve" class="menuLink" data-scroll-spy>Video Intelligent</a></li>
+        <li id="#thirty" data-scroll-spy><a href="#thirty" class="menuLink" data-scroll-spy>Contact</a></li>
     </ul>
     <button id="btn" class="hamburger hamburger--spring " type="button">
         <span class="hamburger-box">
@@ -208,6 +209,31 @@
                 <source src="https://archive.org/download/BigBuckBunny_124/Content/big_buck_bunny_720p_surround.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
+        </div>
+    </section>
+
+    <section id="thirty" class="tam">
+        <h2 data-theme>Contact</h2>
+        <div class="contact">
+            <form action="" id="formContact">
+                <div class="form-group">
+                    <label id="label" for="name">You've to write your name</label>
+                    <input type="text"  placeholder="You write here!" name="name" id="name" required>
+                </div>
+                <div class="form-group">
+                    <label id="label" for="email">You've to write your email</label>
+                    <input type="email" placeholder="You write here!"  name="email" id="email" required>
+                </div>
+                <div class="form-group">
+                    <label id="label" for="">You've to write your issue</label>
+                    <input type="text"  placeholder="You write here!" name="Issue" id="issue" required>
+                </div>
+                <div class="form-group">
+                    <label id="label" for="comment">Comments here</label>
+                    <textarea name="comment" id="comment" cols="30" rows="10" required></textarea>
+                </div>
+                <input type="submit" id="btnSubmit" value="Enviar">
+            </form>
         </div>
     </section>
     <script type="module" src="/SRC/index.js"></script>
