Send form simulated
I've done a send of one form simulated with JS

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         </div>
     </section>
 
-    <section id="twelve" class="tam">
+    <section id="twelve" class="tam" data-scroll-spy>
         <h2 data-theme>Intelligent Video</h2>
         <div class="videIn">
             <video controls class="video" muted >
@@ -212,7 +212,7 @@
         </div>
     </section>
 
-    <section id="thirty" class="tam">
+    <section id="thirty" class="tam" data-scroll-spy>
         <h2 data-theme>Contact</h2>
         <div class="contact">
             <form action="" id="formContact" class="formContacts">
@@ -235,8 +235,8 @@
                 <input type="submit" id="btnSubmit" value="Enviar">
             </form>
         </div>
-        <div class="loader">
-            <img src="/Public/Image/loader.svg" alt="">
+        <div class="none loader">
+            <img src="/Public/Image/spinning-circles.svg" alt="">
         </div>
     </section>
     <script type="module" src="/SRC/index.js"></script>
