--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <li id="#eleven" data-scroll-spy><a class="menuLink" data-scroll-spy href="#eleven">Responsive Slider</a></li>
         <li id="#twelve" data-scroll-spy><a href="#twelve" class="menuLink" data-scroll-spy>Video Intelligent</a></li>
         <li id="#thirty" data-scroll-spy><a href="#thirty" class="menuLink" data-scroll-spy>Contact</a></li>
+        <li id="#foorteen" data-scroll-spy><a href="#foorteen" class="menuLink" data-scroll-spy>Speech API</a></li>
     </ul>
     <button id="btn" class="hamburger hamburger--spring " type="button">
         <span class="hamburger-box">
@@ -237,6 +238,18 @@
         </div>
         <div class="none loader">
             <img src="/Public/Image/spinning-circles.svg" alt="">
+        </div>
+    </section>
+
+    <section id="foorteen" class="tam" data-scroll-spy>
+        <h2 data-theme>Speech API</h2>
+        <div class="speech">
+            <select name="" id="selectSpeech" class="select-speech">
+                <option value="">Select a language</option>
+            </select>
+
+            <textarea name="text" id="text" cols="30" rows="10" class="info-text"></textarea>
+            <button id="btnSpeech">Speech</button>
         </div>
     </section>
     <script type="module" src="/SRC/index.js"></script>
