Fix Nav and Detection device
I've fixed nav and detection device responsive

--- a/index.html
+++ b/index.html
@@ -41,14 +41,15 @@
         <li id="#four" data-scroll-spy><a class="menuLink" data-scroll-spy href="#four">Button and Event Scroll</a></li>
         <li id="#five" data-scroll-spy><a class="menuLink" data-scroll-spy href="#five">Theme Dark and Light</a></li>
         <li id="#six" data-scroll-spy><a class="menuLink" data-scroll-spy href="#six">Responsive Tester</a></li>
-        <li id="#seven" data-scroll-spy><a class="menuLink" data-scroll-spy href="#seven">Detection Device</a></li>
-        <li id="#eight" data-scroll-spy><a class="menuLink" data-scroll-spy href="#eight">Geolocation</a></li>
-        <li id="#nine" data-scroll-spy><a class="menuLink" data-scroll-spy href="#nine">Filter</a></li>
-        <li id="#ten" data-scroll-spy><a class="menuLink" data-scroll-spy href="#ten">Digital Draw</a></li>
-        <li id="#eleven" data-scroll-spy><a class="menuLink" data-scroll-spy href="#eleven">Responsive Slider</a></li>
-        <li id="#twelve" data-scroll-spy><a href="#twelve" class="menuLink" data-scroll-spy>Video Intelligent</a></li>
-        <li id="#thirty" data-scroll-spy><a href="#thirty" class="menuLink" data-scroll-spy>Contact</a></li>
-        <li id="#foorteen" data-scroll-spy><a href="#foorteen" class="menuLink" data-scroll-spy>Speech API</a></li>
+        <li id="#seven" data-scroll-spy><a class="menuLink" data-scroll-spy href="#seven">Navigator and UserAgent</a></li>
+        <li id="#eight" data-scroll-spy><a class="menuLink" data-scroll-spy href="#eight">Detection Device</a></li>
+        <li id="#nine" data-scroll-spy><a class="menuLink" data-scroll-spy href="#nine">Geolocation</a></li>
+        <li id="#ten" data-scroll-spy><a class="menuLink" data-scroll-spy href="#ten">Filter</a></li>
+        <li id="#eleven" data-scroll-spy><a class="menuLink" data-scroll-spy href="#eleven">Digital Draw</a></li>
+        <li id="#twelve" data-scroll-spy><a href="#twelve" class="menuLink" data-scroll-spy>Responsive Slider</a></li>
+        <li id="#thirty" data-scroll-spy><a href="#thirty" class="menuLink" data-scroll-spy>Video Intelligent</a></li>
+        <li id="#foorteen" data-scroll-spy><a href="#foorteen" class="menuLink" data-scroll-spy>Contact Form</a></li>
+        <li id="#fiftheen" data-scroll-spy><a href="#foorteen" class="menuLink" data-scroll-spy>Speech API</a></li>
     </ul>
     <button id="btn" class="hamburger hamburger--spring " type="button">
         <span class="hamburger-box">
@@ -132,24 +133,24 @@
         </form>
     </section>
     
-    <section id="six" class="tam" data-scroll-spy>
+    <section id="seven" class="tam" data-scroll-spy>
         <h2 data-theme>Navigator and user Agent</h2>
         <section id="userAgent"></section>
     </section>
 
-    <section id="seven" class="tam" data-scroll-spy>
+    <section id="eight" class="tam" data-scroll-spy>
         <h2 data-theme>Detection divice</h2>
         <section id="getUserMedia">
             <video id="webcam"></video>
         </section>
     </section>
 
-    <section id="eight" class="tam" data-scroll-spy>
+    <section id="nine" class="tam" data-scroll-spy>
         <h2 data-theme>Geolocation</h2>
         <section id="geolocation"></section>
     </section>
 
-    <section id="nine" class="tam" data-scroll-spy>
+    <section id="ten" class="tam" data-scroll-spy>
         <div class="filterform">
             <h2 data-theme>Filter</h2>
             <input type="text" name="filter" placeholder="Filter results" id="filter">
@@ -164,7 +165,7 @@
         </section>
     </section>
 
-    <section id="ten" class="tam" data-scroll-spy>
+    <section id="eleven" class="tam" data-scroll-spy>
         <h2 data-theme>Digital Draw</h2>
         <div id="digitalDraw">
             <ul id="listDraw">
@@ -177,10 +178,10 @@
                 <li class="listDraw">Next</li>
             </ul>
         </div>
-        <button id="random">Get Win</button>
+        <button class="btn" id="random">Get Win</button>
     </section>
 
-    <section id="eleven" class="tam" data-scroll-spy>
+    <section id="twelve" class="tam" data-scroll-spy>
         <h2 data-theme>Responsive Slider</h2>
         <div class="slider">
             <div class="slider-slides">
@@ -203,7 +204,7 @@
         </div>
     </section>
 
-    <section id="twelve" class="tam" data-scroll-spy>
+    <section id="thirty" class="tam" data-scroll-spy>
         <h2 data-theme>Intelligent Video</h2>
         <div class="videIn">
             <video controls class="video" muted >
@@ -213,7 +214,7 @@
         </div>
     </section>
 
-    <section id="thirty" class="tam" data-scroll-spy>
+    <section id="foorteen" class="tam" data-scroll-spy>
         <h2 data-theme>Contact</h2>
         <div class="contact">
             <form action="" id="formContact" class="formContacts">
@@ -241,7 +242,7 @@
         </div>
     </section>
 
-    <section id="foorteen" class="tam" data-scroll-spy>
+    <section id="fiftheen" class="tam" data-scroll-spy>
         <h2 data-theme>Speech API</h2>
         <div class="speech">
             <select name="" id="selectSpeech" class="select-speech">
@@ -249,7 +250,7 @@
             </select>
 
             <textarea name="text" id="text" cols="30" rows="10" class="info-text"></textarea>
-            <button id="btnSpeech">Speech</button>
+            <button class="btn" id="btnSpeech">Speech</button>
         </div>
     </section>
     <script type="module" src="/SRC/index.js"></script>
