--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <ul id="menu" class="list">
         <li id="#first" data-scroll-spy><a class="menuLink" data-scroll-spy href="#first">Alarm and Relog</a></li>
         <li id="#second" data-scroll-spy><a class="menuLink" data-scroll-spy href="#second">Shortcut and KeyBoard</a></li>
-        <li id="third" data-scroll-spy><a class="menuLink" data-scroll-spy href="#third">CountDown</a></li>
+        <li id="#third" data-scroll-spy><a class="menuLink" data-scroll-spy href="#third">CountDown</a></li>
         <li id="#four" data-scroll-spy><a class="menuLink" data-scroll-spy href="#four">Button and Event Scroll</a></li>
         <li id="#five" data-scroll-spy><a class="menuLink" data-scroll-spy href="#five">Theme Dark and Light</a></li>
         <li id="#six" data-scroll-spy><a class="menuLink" data-scroll-spy href="#six">Responsive Tester</a></li>
@@ -253,6 +253,7 @@
             <button class="btn" id="btnSpeech">Speech</button>
         </div>
     </section>
+
     <script type="module" src="/SRC/index.js"></script>
 </body>
 </html>
